<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.jarvis</groupId>
  <artifactId>jarvis-java</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>core-agent</module>
    <module>planning</module>
    <module>tool-execution</module>
    <module>memory</module>
    <module>rag</module>
    <module>speech</module>
    <module>integrations</module>
    <module>plugin-registry</module>
    <module>audit-log</module>
    <module>security</module>
    <module>updater</module>
    <module>licensing</module>
    <module>usage-metering</module>
    <module>tasks</module>
    <module>workflows</module>
    <module>knowledge-base</module>
    <module>multi-agent</module>
    <module>autonomous</module>
    <module>discussion</module>
    <module>solicitations</module>
    <module>documents</module>
    <module>api</module>
    <module>ui</module>
    <module>app</module>
  </modules>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jackson.version>2.18.2</jackson.version>
    <junit.jupiter.version>5.11.4</junit.jupiter.version>
    <!-- Approved exception to the Jackson+JUnit whitelist: PDF text extraction
         (Apache-2.0). Office formats stay JDK-only; all other readers are native. -->
    <pdfbox.version>3.0.3</pdfbox.version>
    <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
    <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.pdfbox</groupId>
        <artifactId>pdfbox</artifactId>
        <version>${pdfbox.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
            <release>${maven.compiler.release}</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
